<resources>
    <string name="app_name">CovidNow</string>
    <string name="title_activity_maps">Map</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="search_places">Search Places</string>
    <string name="last_hotspot_designation">Last Hotspot Designation:</string>
    <string name="n_a">N/A</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="last_updated">Last Updated:</string>
    <string name="username">Username</string>
    <string name="reviews">Reviews:</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="picture_url">pictureUrl</string>
    <string name="i_have_covid_19">I have COVID-19</string>
    <string name="textview">TextView</string>
    <string name="exposure_history">Exposure History:</string>
    <string name="hotspot">Hotspot?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="compose_review">Compose review</string>
    <string name="action_share">action_share</string>
    <string name="action_link">action_link</string>
    <string name="sharing_body">Check out this article on COVID-19!</string>
    <string name="arrow">arrow</string>

</resources>