<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activity.LoginActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/signup" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="200dp"
        android:elevation="2dp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/reset_password"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>