<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ComposeReviewFragment">

    <TextView
        android:id="@+id/tvCases"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_blue"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="serif"
        android:padding="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/compose_review" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCaptureImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:elevation="1dp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchHotspot"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/design_default_color_background"
        android:layout_marginEnd="20dp"
        android:text="@string/take_picture" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/btnCaptureImage"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostImage"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/design_default_color_background"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/submit" />

    <Switch
        android:id="@+id/switchHotspot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/hotspot"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCases"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/textview"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>